# BareMetal_ZynqSoC

EthernetApps/QtTestApps/UDP/EchoServer/UDP_echoServer/UDP_echoServerHandler/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.ui
EthernetApps/QtTestApps/UDP/Freeflow/ZynqDataTransferClient/: CMakeLists.txt  ZynqDataTransferClient.pro  build.bat  build_instructions.md  mainwindow.cpp  mainwindow.h
EthernetApps/QtTestApps/UDP/Freeflow_custom/ZynqDataTransferClient/: CMakeLists.txt  ZynqDataTransferClient.pro  build.bat  build_instructions.md  mainwindow.cpp  mainwindow.h
EthernetApps/QtTestApps/UDP_echoServer/UDP_echoServerHandler/: mainwindow.h
EthernetApps/UDP/: README.md
EthernetApps/UDP/Echo_server/UDP_echoServer/: .cproject  .project  UDP_echoServer.prj
EthernetApps/UDP/FreeFlow/UDP_echoServer/: README_DataTransfer.md  UDP_echoServer.prj
EthernetApps/UDP/FreeFlow/UDP_echoServer/src/: data_transfer.c  data_transfer.h
EthernetApps/UDP/Freeflow_custom/UDP_echoServer/: README_DataTransfer.md  UDP_echoServer.prj
EthernetApps/UDP/Freeflow_custom/UDP_echoServer/Debug/: UDP_echoServer.elf  UDP_echoServer.elf.size  makefile  objects.mk
EthernetApps/UDP/Freeflow_custom/UDP_echoServer/Debug/src/: data_transfer.d  i2c_access.d  iic_phyreset.d  main.d  platform_zynq.d  platform_zynqmp.d  sfp.d  si5324.d  subdir.mk
EthernetApps/UDP/Freeflow_custom/UDP_echoServer/src/: data_transfer.c  data_transfer.h  main.c
EthernetApps/UDP/UDP_echoServer/: .gitignore
EthernetApps/UDP/UDP_echoServer/src/: main.c
